SUBDIRS = src

EXTRA_DIST = README.zh_CN.UTF-8 \
	test/threadsafe.pl test/music.tar

MAINTAINERCLEANFILES = \
        $(srcdir)/aclocal.m4 \
        $(srcdir)/confdefs.h \
        $(srcdir)/config.guess \
        $(srcdir)/config.h.in \
        $(srcdir)/config.sub \
        $(srcdir)/configure \
        $(srcdir)/depcomp \
        $(srcdir)/install-sh \
        $(srcdir)/ltmain.sh \
        $(srcdir)/mkinstalldirs \
        $(srcdir)/Makefile.in \
        $(srcdir)/missing

